syntax = "proto3";

package Schema.Protobuf.Message.Common;

message GameResult
{
	int64 RoomID = 1;
	int64 Idx = 2;
	int32 Rank = 3;
}

message MatchingInfo
{
	int64 GameServerId = 1;
	int64 LobbyDelegatorID = 2;
	int64 RoomId = 3;
}

message Vector2
{
	float X = 1;
	float Y = 2;
}

message Vector3
{
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message Character
{
	int64 Idx = 101;
	Vector3 Position = 102;
	Vector3 Direction = 103;
	float Speed = 104;
}

message PlaneMap
{
	Vector3 Center = 101;
	float Width = 102;
}